@@ -1,7 +1,6 @@
 package mindustry.ui.dialogs;
 
 import arc.*;
-import mindustry.client.*;
 import mindustry.client.ui.*;
 import mindustry.gen.*;
 
@@ -55,7 +54,7 @@ public class PausedDialog extends BaseDialog{
                         ui.host.show();
                     }
                 }
-            }).disabled(b -> !((steam && net.server()) || !net.active())).colspan(2).width(dw * 2 + 20f).update(e -> e.setText(net.server() && steam ? "@invitefriends" : "@hostserver"));
+            }).disabled(b -> !((steam && net.server()) || !net.active())).colspan(2).width(dw * 2 + 10f).update(e -> e.setText(net.server() && steam ? "@invitefriends" : "@hostserver"));
 
             cont.row();
 
@@ -64,7 +63,7 @@ public class PausedDialog extends BaseDialog{
 
             cont.row();
 
-            cont.button("@quit", Icon.exit, this::showQuitConfirm).update(s -> s.setText(control.saves.getCurrent() != null && control.saves.getCurrent().isAutosave() ? "@save.quit" : "@quit"));
+            cont.button("@quit", Icon.exit, this::showQuitConfirm).colspan(2).width(dw * 2 + 10f).update(s -> s.setText(control.saves.getCurrent() != null && control.saves.getCurrent().isAutosave() ? "@save.quit" : "@quit"));
 
 
         }else{
