@@ -17,6 +17,7 @@
  * A radius option for the BuildPath that allows to only build/upgrade within x blocks of the spot where the command is run
  * An item limit on BuildPath's drills and belts options, they will do nothing if the core has less than 100 of any of the needed items
  * Reactors now show their range when being placed, press f9 to toggle this.
+ * Removed encrypted and signed messages as they broke the server list and auto updater
 
 # Version 7.3.0
  * Fixed an issue in buildpath where !builder belts and !builder drill would only partially upgrade each building
